--- a/styles.css
+++ b/styles.css
@@ -13,38 +13,49 @@ body, html {
 .flex {
     display: flex;
     flex-direction: column;
+    
+    align-items: center;
     height: 100%;
 }
 .nav {
-    
-    display: flex;
-    align-items: center;
+    align-self: flex-end;
     padding: 6px;
     height: 60px;
     flex-shrink: 0;
     box-sizing: border-box;
-    justify-content: flex-end;
+    
 }
 #nav {
     min-width: auto;
     height: 48px;
     list-style-type: none;
-    position: relative;
-    float: right;
+    margin: 0;
     padding: 0 4px;
     
 }
 li {
     display: inline;
 }
-a {
+a.nav {
     color: rgba(0,0,0,0.87);
     text-decoration: none;
     font-size: 13px;
     cursor: pointer;
 }
+a {
+    color: #70757a;
+    text-decoration: none;
+    font-size: 13px;
+    cursor: pointer;
+    font-size: 14px;
+    padding: 15px;
+}
 a:hover {
     text-decoration: underline;
+}
+.container {
+    margin-top: 20px;
+    
 }
 footer {
     position: fixed;
@@ -52,6 +63,13 @@ footer {
     right: 0px;
     width: 100%;
     text-align: end;
+    justify-content: space-evenly;
+    display: flex;
+    background: #f2f2f2;
+    
+}
+#footer-txt {
+    color: #70757a;
 }
 #signin-btn {
     background-color:#1a73e8;
@@ -65,9 +83,9 @@ footer {
     cursor: pointer;
 }
 .btn {
-    background-color:gray;
+    background-color:#f8f9fa;
     border: none;
-    color: rgb(0, 0, 0);
+    color: #3c4043;
     border-radius: 4px;
     padding: 10px 20px;
     text-align: center;
